using MediatR;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace FDAAPI.App.Common.Features
{
    public interface IFeatureRequest<out TResponse> : IRequest<TResponse>
    {
    }
}






